ci/deployment/k8s/minikube/errobudget-analytics-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: "analytics"
  namespace: "minikube"
  annotations:
    prometheus.io/scrape: 'true'
spec:
  selector:
    app: "analytics"
  ports:
    - port: 1234
