ci/deployment/k8s/minikube/postgres-dep.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: minikube
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: postgres
  template:
    metadata:
      labels:
        name: postgres
        k8s-app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:10.6-alpine
          imagePullPolicy: IfNotPresent
          args: ["-c", "max_connections=1200"]
          ports:
            - name: port
              containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: minikube
spec:
  ports:
    - port: 5432
      nodePort: 30007
  type: NodePort
  selector:
    name: postgres
